<resources>
    <string name="app_name">Skin Cancer Detection</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_camera">Camera</string>
    <string name="button_login">Login</string>
    <string name="login">Login</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="forgotten_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an Account? Register here</string>
    <string name="check_email">Check your email</string>
    <string name="code_explanation">Insert the code you received in the email we send you</string>
    <string name="code">Code</string>
    <string name="upload">Upload Code</string>
    <string name="back_to_login">Back to login</string>
    <string name="birth_date_string">Birth Date: </string>
    <string name="enter_name">Full Name</string>
    <string name="back_string">Back</string>
    <string name="next_string">Next</string>
    <string name="terms_and_conds">Terms and Conditions</string>
    <string name="reset_password_info">To reset your password we just need your email address</string>
    <string name="reset_your_password">Reset Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_explanation">Type in your new password below, and then type it a second time</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="button_register">Register</string>
    <string name="reset_password_instructions">Type in your e-mail address below and we will send you a code</string>
    <string name="email2">Email Address</string>
    <string name="send_code">Send Code</string>
    <string name="accept_string">Accept</string>
    <string name="send_skin_scan_text">If you\'re happy with the picture tap below for results.</string>
    <string name="skin_cancer_diagnosis">Skin Cancer Diagnosis</string>
    <string name="risk_info">This is based on a comparison with thousands of confirmed skin cancer images. While reliable for well centered images of moles and skin lesions, images of anything else will be incoherent.</string>
    <string name="low_risk_info">This is NOT a diagnosis, if you are unsure please seek a medical professional who can provide a more informed diagnosis.</string>
    <string name="high_risk_info">This is NOT a diagnosis, we advise that you seek a medical professional\'s opinion based on the algorithms results.</string>
</resources>